// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> if navbar is invisible renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative"
      >
        <nav
          class="bg-transparent relative h-20 py-2 border-b border-solid border-first-500 hidden"
        >
          <div
            class="flex items-center gap-4"
          >
            <div
              class="flex items-center mr-8"
            >
              <a
                class="h-16 w-16 mr-2 ml-8"
                href="#"
              >
                MockEADLogo
              </a>
              <div
                class="text-first-500 text-end text-xs "
              >
                0.4.0
              </div>
            </div>
            <button
              class="rounded-md p-3 my-1 ml-0 btn-first"
              title="Download EAD"
              type="button"
            >
              Download EAD
            </button>
            <label
              class="text-center p-3 rounded-md cursor-pointer btn-second"
              title="Upload an EAD file"
            >
              Upload EAD
              <input
                accept=".json"
                class="hidden"
                title="Select an uploaded EAD"
                type="file"
              />
            </label>
            <button
              class="rounded-md p-3 my-1 mx-0 btn-second "
              title="Reset"
              type="button"
            >
              Reset
            </button>
            <a
              class="w-8 h-8 mx-8 ml-auto"
              href="https://github.com/ozovalihasan/ead"
              target="_blank"
              title="The repository of the project"
            >
              MockGithubLogo
            </a>
          </div>
        </nav>
        <button
          class="absolute left-0 -bottom-8 h-3 w-3 z-50 m-2"
          title="Click to show/hide the navbar"
        >
          MockAngleDown
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative"
    >
      <nav
        class="bg-transparent relative h-20 py-2 border-b border-solid border-first-500 hidden"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="flex items-center mr-8"
          >
            <a
              class="h-16 w-16 mr-2 ml-8"
              href="#"
            >
              MockEADLogo
            </a>
            <div
              class="text-first-500 text-end text-xs "
            >
              0.4.0
            </div>
          </div>
          <button
            class="rounded-md p-3 my-1 ml-0 btn-first"
            title="Download EAD"
            type="button"
          >
            Download EAD
          </button>
          <label
            class="text-center p-3 rounded-md cursor-pointer btn-second"
            title="Upload an EAD file"
          >
            Upload EAD
            <input
              accept=".json"
              class="hidden"
              title="Select an uploaded EAD"
              type="file"
            />
          </label>
          <button
            class="rounded-md p-3 my-1 mx-0 btn-second "
            title="Reset"
            type="button"
          >
            Reset
          </button>
          <a
            class="w-8 h-8 mx-8 ml-auto"
            href="https://github.com/ozovalihasan/ead"
            target="_blank"
            title="The repository of the project"
          >
            MockGithubLogo
          </a>
        </div>
      </nav>
      <button
        class="absolute left-0 -bottom-8 h-3 w-3 z-50 m-2"
        title="Click to show/hide the navbar"
      >
        MockAngleDown
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Navbar /> if navbar is visible renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative"
      >
        <nav
          class="bg-transparent relative h-20 py-2 border-b border-solid border-first-500 true"
        >
          <div
            class="flex items-center gap-4"
          >
            <div
              class="flex items-center mr-8"
            >
              <a
                class="h-16 w-16 mr-2 ml-8"
                href="#"
              >
                MockEADLogo
              </a>
              <div
                class="text-first-500 text-end text-xs "
              >
                0.4.0
              </div>
            </div>
            <button
              class="rounded-md p-3 my-1 ml-0 btn-first"
              title="Download EAD"
              type="button"
            >
              Download EAD
            </button>
            <label
              class="text-center p-3 rounded-md cursor-pointer btn-second"
              title="Upload an EAD file"
            >
              Upload EAD
              <input
                accept=".json"
                class="hidden"
                title="Select an uploaded EAD"
                type="file"
              />
            </label>
            <button
              class="rounded-md p-3 my-1 mx-0 btn-second "
              title="Reset"
              type="button"
            >
              Reset
            </button>
            <a
              class="w-8 h-8 mx-8 ml-auto"
              href="https://github.com/ozovalihasan/ead"
              target="_blank"
              title="The repository of the project"
            >
              MockGithubLogo
            </a>
          </div>
        </nav>
        <button
          class="absolute left-0 -bottom-8 h-3 w-3 z-50 m-2"
          title="Click to show/hide the navbar"
        >
          MockUpArrow
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative"
    >
      <nav
        class="bg-transparent relative h-20 py-2 border-b border-solid border-first-500 true"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="flex items-center mr-8"
          >
            <a
              class="h-16 w-16 mr-2 ml-8"
              href="#"
            >
              MockEADLogo
            </a>
            <div
              class="text-first-500 text-end text-xs "
            >
              0.4.0
            </div>
          </div>
          <button
            class="rounded-md p-3 my-1 ml-0 btn-first"
            title="Download EAD"
            type="button"
          >
            Download EAD
          </button>
          <label
            class="text-center p-3 rounded-md cursor-pointer btn-second"
            title="Upload an EAD file"
          >
            Upload EAD
            <input
              accept=".json"
              class="hidden"
              title="Select an uploaded EAD"
              type="file"
            />
          </label>
          <button
            class="rounded-md p-3 my-1 mx-0 btn-second "
            title="Reset"
            type="button"
          >
            Reset
          </button>
          <a
            class="w-8 h-8 mx-8 ml-auto"
            href="https://github.com/ozovalihasan/ead"
            target="_blank"
            title="The repository of the project"
          >
            MockGithubLogo
          </a>
        </div>
      </nav>
      <button
        class="absolute left-0 -bottom-8 h-3 w-3 z-50 m-2"
        title="Click to show/hide the navbar"
      >
        MockUpArrow
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Navbar /> it renders a button to show/hide the navbar renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative"
      >
        <nav
          class="bg-transparent relative h-20 py-2 border-b border-solid border-first-500 true"
        >
          <div
            class="flex items-center gap-4"
          >
            <div
              class="flex items-center mr-8"
            >
              <a
                class="h-16 w-16 mr-2 ml-8"
                href="#"
              >
                MockEADLogo
              </a>
              <div
                class="text-first-500 text-end text-xs "
              >
                0.4.0
              </div>
            </div>
            <button
              class="rounded-md p-3 my-1 ml-0 btn-first"
              title="Download EAD"
              type="button"
            >
              Download EAD
            </button>
            <label
              class="text-center p-3 rounded-md cursor-pointer btn-second"
              title="Upload an EAD file"
            >
              Upload EAD
              <input
                accept=".json"
                class="hidden"
                title="Select an uploaded EAD"
                type="file"
              />
            </label>
            <button
              class="rounded-md p-3 my-1 mx-0 btn-second "
              title="Reset"
              type="button"
            >
              Reset
            </button>
            <a
              class="w-8 h-8 mx-8 ml-auto"
              href="https://github.com/ozovalihasan/ead"
              target="_blank"
              title="The repository of the project"
            >
              MockGithubLogo
            </a>
          </div>
        </nav>
        <button
          class="absolute left-0 -bottom-8 h-3 w-3 z-50 m-2"
          title="Click to show/hide the navbar"
        >
          MockUpArrow
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative"
    >
      <nav
        class="bg-transparent relative h-20 py-2 border-b border-solid border-first-500 true"
      >
        <div
          class="flex items-center gap-4"
        >
          <div
            class="flex items-center mr-8"
          >
            <a
              class="h-16 w-16 mr-2 ml-8"
              href="#"
            >
              MockEADLogo
            </a>
            <div
              class="text-first-500 text-end text-xs "
            >
              0.4.0
            </div>
          </div>
          <button
            class="rounded-md p-3 my-1 ml-0 btn-first"
            title="Download EAD"
            type="button"
          >
            Download EAD
          </button>
          <label
            class="text-center p-3 rounded-md cursor-pointer btn-second"
            title="Upload an EAD file"
          >
            Upload EAD
            <input
              accept=".json"
              class="hidden"
              title="Select an uploaded EAD"
              type="file"
            />
          </label>
          <button
            class="rounded-md p-3 my-1 mx-0 btn-second "
            title="Reset"
            type="button"
          >
            Reset
          </button>
          <a
            class="w-8 h-8 mx-8 ml-auto"
            href="https://github.com/ozovalihasan/ead"
            target="_blank"
            title="The repository of the project"
          >
            MockGithubLogo
          </a>
        </div>
      </nav>
      <button
        class="absolute left-0 -bottom-8 h-3 w-3 z-50 m-2"
        title="Click to show/hide the navbar"
      >
        MockUpArrow
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
